fixed overflow hidden bug

--- a/CSS/reset.css
+++ b/CSS/reset.css
@@ -24,10 +24,15 @@ button {
     border: 0;
     background-color: transparent;
     cursor: pointer;
-} 
+}
 
 html {
     font-size: 62.5%;
     background-color: var(--gray-900);
     color: var(--gray-100);
+}
+
+.wrapper {
+    position: relative;
+    overflow-x: hidden;
 }
